@@ -9,9 +9,12 @@
 <li>Custom status messages. A maximum of 64 characters will be imposed.</li>
 <li>Denote extreme time deltas in Chat. Currently configured to thirty seconds. Source only.</li>
 <li>Digital signatures should vouch for private key information.</li>
+<li>Do not delete URLs from shared.db unless they were properly loaded.<li>
 <li>Encapsulate data into streams and decrease Base-64 conversions. This will result in smaller messages. Previous functionality will be disrupted.</li>
 <li>Guard QList::last().</li>
 <li>Guard QList::removeAt().</li>
+<li>Notify the user of URL import statistics.</li>
+<li>Perform a database transaction before attempting to insert shared URLs. If the particular database driver does not support transactions, insert failures may create incomplete entries in the spot_on_keywords tables. If the imported URL cannot have its keywords stored and if the specified database does not support transactions, the import will be considered successful.</li>
 <li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
 <li>Updated NTRU files (05/02/2015).</li>
 </ol>
